--- a/Pages/MainWindow.xaml
+++ b/Pages/MainWindow.xaml
@@ -14,12 +14,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <ui:SimpleStackPanel x:Name="NavBar" Grid.Column="0" Orientation="Vertical" Width="170" Spacing="7" Background="#141414">
-            <Button x:Name="ThemesBtn" Tag="Nav_ThemesBtn" Style="{StaticResource NavBtn}" Content="Themes" Click="ThemesBtn_Click"/>
-            <Button x:Name="PluginsBtn" Tag="Nav_PluginsBtn" Style="{StaticResource NavBtn}" Content="Plugins" Click="PluginsBtn_Click"/>
-            <Button x:Name="SettingsBtn" Tag="Nav_SettingsBtn" Style="{StaticResource NavBtn}" Content="Settings" Click="SettingsBtn_Click"/>
-            <Button x:Name="ManageBtn" Tag="Nav_ManageBtn" Style="{StaticResource NavBtn}" Content="Manage" Click="ManageBtn_Click"/>
-            <Button x:Name="AboutBtn" Tag="Nav_AboutBtn" Style="{StaticResource NavBtn}" Content="About" Click="AboutBtn_Click"/>
-            <Button x:Name="LogsBtn" Tag="Nav_LogsBtn" Style="{StaticResource NavBtn}" Content="Logs" Click="LogsBtn_Click"/>
+            <Button x:Name="ThemesBtn" Style="{StaticResource NavBtn}" Content="Themes" Click="ThemesBtn_Click"/>
+            <Button x:Name="PluginsBtn" Style="{StaticResource NavBtn}" Content="Plugins" Click="PluginsBtn_Click"/>
+            <Button x:Name="SettingsBtn" Style="{StaticResource NavBtn}" Content="Settings" Click="SettingsBtn_Click"/>
+            <Button x:Name="ManageBtn" Style="{StaticResource NavBtn}" Content="Manage" Click="ManageBtn_Click"/>
+            <Button x:Name="AboutBtn" Style="{StaticResource NavBtn}" Content="About" Click="AboutBtn_Click"/>
+            <Button x:Name="LogsBtn" Style="{StaticResource NavBtn}" Content="Logs" Click="LogsBtn_Click"/>
         </ui:SimpleStackPanel>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
@@ -44,6 +44,7 @@
                                         <Style TargetType="ui:MenuFlyoutPresenter">
                                             <Setter Property="Background" Value="{StaticResource BgDarkSolid}"/>
                                             <Setter Property="BorderBrush" Value="{StaticResource BgBrightSolid}"/>
+                                            <Setter Property="CornerRadius" Value="5"/>
                                         </Style>
                                     </ui:MenuFlyout.MenuFlyoutPresenterStyle>
                                     <ui:MenuFlyout.Items>
@@ -56,7 +57,7 @@
                             </ui:DropDownButton.Flyout>
                         </ui:DropDownButton>
                     </ui:SimpleStackPanel>
-                    <Button Grid.Column="1" x:Name="ReloadBtn" Style="{StaticResource ActionBtnStyle}" Width="32" Padding="0" HorizontalAlignment="Right" Click="ReloadBtn_Click">
+                    <Button Grid.Column="1" x:Name="ReloadBtn" Style="{StaticResource ButtonStyle}" Width="32" Height="32" Padding="0" HorizontalAlignment="Right" Click="ReloadBtn_Click">
                         <Image Source="{StaticResource RefreshArrow}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" Width="Auto"/>
                     </Button>
                 </Grid>
