--- a/Pages/ManagePage.xaml
+++ b/Pages/ManagePage.xaml
@@ -25,6 +25,7 @@
                         <Style TargetType="ui:MenuFlyoutPresenter">
                             <Setter Property="Background" Value="{StaticResource BgDarkSolid}"/>
                             <Setter Property="BorderBrush" Value="{StaticResource BgBrightSolid}"/>
+                            <Setter Property="CornerRadius" Value="5"/>
                         </Style>
                     </ui:MenuFlyout.MenuFlyoutPresenterStyle>
                     <ui:MenuFlyout.Items>
