--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="SpicetifyManager.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="Pages/MainWindow.xaml"
-             xmlns:ui="http://schemas.modernwpf.com/2019">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:clr="clr-namespace:System;assembly=mscorlib" StartupUri="Pages/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Styles/ListView.xaml"/>
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
+            <!-- Other app resources here -->
             <Style TargetType="Label" x:Key="PageTitle">
                 <Setter Property="FontSize" Value="27"/>
                 <Setter Property="FontWeight" Value="Bold"/>
@@ -21,7 +22,7 @@
                 <Setter Property="HorizontalAlignment" Value="Left"/>
                 <Setter Property="Padding" Value="0"/>
             </Style>
-            <!-- Other app resources here -->
+            <clr:String x:Key="AppVersion">2.1.0</clr:String>
             <BitmapImage x:Key="Logo" UriSource="Resources/logo.png"/>
             <BitmapImage x:Key="RefreshArrow" UriSource="Resources/sharp_refresh_white_24dp.png"/>
         </ResourceDictionary>
