--- a/Pages/AboutPage.xaml
+++ b/Pages/AboutPage.xaml
@@ -40,7 +40,7 @@
             <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Spicetify Version: " Margin="0,0,0,3"/>
             <Label Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelStyle}" Content="Backup Version: " Margin="0,0,0,3"/>
             <ui:SimpleStackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="11">
-                <Label x:Name="AppVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
+                <Label x:Name="AppVersionLabel" Style="{StaticResource VersionStyle}" Content="{StaticResource AppVersion}"/>
                 <Label x:Name="AppVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
             </ui:SimpleStackPanel>
             <ui:SimpleStackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Spacing="11">
