--- a/Pages/PluginsPage.xaml
+++ b/Pages/PluginsPage.xaml
@@ -12,7 +12,7 @@
             <Setter Property="Margin" Value="0,7,0,0"/>
             <Setter Property="Foreground" Value="White"/>
             <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="MaxHeight" Value="320"/>
+            <Setter Property="Height" Value="320"/>
             <Setter Property="SelectionMode" Value="Multiple"/>
             <Setter Property="ui:ScrollViewerHelper.AutoHideScrollBars" Value="True"/>
         </Style>
