--- a/Styles/TextBox.xaml
+++ b/Styles/TextBox.xaml
@@ -1,5 +1,5 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:ui="http://schemas.modernwpf.com/2019">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ui="http://schemas.modernwpf.com/2019">
     <Thickness x:Key="TextBoxTopHeaderMargin">0,0,0,4</Thickness>
 
     <ui:CornerRadiusFilterConverter x:Key="RightCornerRadiusFilterConverter" Filter="Right"/>
@@ -22,7 +22,7 @@
         <Setter Property="MinHeight" Value="{DynamicResource TextControlThemeMinHeight}"/>
         <Setter Property="MinWidth" Value="{DynamicResource TextControlThemeMinWidth}"/>
         <Setter Property="Padding" Value="{DynamicResource TextControlThemePadding}"/>
-        <Setter Property="ui:ControlHelper.CornerRadius" Value="{DynamicResource ControlCornerRadius}"/>
+        <Setter Property="ui:ControlHelper.CornerRadius" Value="5"/>
         <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="AllowDrop" Value="true"/>
@@ -42,16 +42,12 @@
                                         <ControlTemplate.Resources>
                                             <StreamGeometry x:Key="Cancel">M 10.888672 10 L 17.626953 16.748047 L 16.748047 17.626953 L 10 10.888672 L 3.251953 17.626953 L 2.373047 16.748047 L 9.111328 10 L 2.373047 3.251953 L 3.251953 2.373047 L 10 9.111328 L 16.748047 2.373047 L 17.626953 3.251953 Z</StreamGeometry>
                                         </ControlTemplate.Resources>
-                                        <Border x:Name="ButtonLayoutGrid"
-                                                BorderBrush="{DynamicResource TextControlButtonBorderBrush}"
-                                                BorderThickness="{TemplateBinding BorderThickness}"
-                                                Background="{DynamicResource TextControlButtonBackground}"
+                                        <Border x:Name="ButtonLayoutGrid" BorderBrush="{DynamicResource TextControlButtonBorderBrush}"
+                                                BorderThickness="{TemplateBinding BorderThickness}" Background="{DynamicResource TextControlButtonBackground}"
                                                 CornerRadius="{TemplateBinding ui:ControlHelper.CornerRadius}">
-                                            <ui:FontIconFallback x:Name="GlyphElement"
-                                                                 Foreground="{DynamicResource TextControlButtonForeground}"
-                                                                 VerticalAlignment="Center" HorizontalAlignment="Center"
-                                                                 FontStyle="Normal" FontSize="12" Data="{StaticResource Cancel}"
-                                                                 FontFamily="{DynamicResource SymbolThemeFontFamily}"/>
+                                            <ui:FontIconFallback x:Name="GlyphElement" Foreground="{DynamicResource TextControlButtonForeground}"
+                                                                 VerticalAlignment="Center" HorizontalAlignment="Center" FontStyle="Normal" FontSize="12"
+                                                                 Data="{StaticResource Cancel}" FontFamily="{DynamicResource SymbolThemeFontFamily}"/>
                                         </Border>
                                         <ControlTemplate.Triggers>
                                             <Trigger Property="IsMouseOver" Value="true">
@@ -59,15 +55,13 @@
                                                         Value="{DynamicResource TextControlButtonBackgroundPointerOver}"/>
                                                 <Setter Property="BorderBrush" TargetName="ButtonLayoutGrid"
                                                         Value="{DynamicResource TextControlButtonBorderBrushPointerOver}"/>
-                                                <Setter Property="Foreground" TargetName="GlyphElement"
-                                                        Value="{StaticResource SecondarySolid}"/>
+                                                <Setter Property="Foreground" TargetName="GlyphElement" Value="{StaticResource SecondarySolid}"/>
                                             </Trigger>
                                             <Trigger Property="IsPressed" Value="true">
                                                 <Setter Property="Background" TargetName="ButtonLayoutGrid" Value="Transparent"/>
                                                 <Setter Property="BorderBrush" TargetName="ButtonLayoutGrid"
                                                         Value="{DynamicResource TextControlButtonBorderBrushPressed}"/>
-                                                <Setter Property="Foreground" TargetName="GlyphElement"
-                                                        Value="{StaticResource BgBrushInv}"/>
+                                                <Setter Property="Foreground" TargetName="GlyphElement" Value="{StaticResource BgBrushInv}"/>
                                             </Trigger>
                                             <Trigger Property="IsEnabled" Value="false">
                                                 <Setter Property="Opacity" TargetName="ButtonLayoutGrid" Value="0"/>
@@ -83,8 +77,7 @@
                             <VisualStateGroup x:Name="ButtonStates">
                                 <VisualState x:Name="ButtonVisible">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="DeleteButton"
-                                                                       Storyboard.TargetProperty="Visibility">
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="DeleteButton" Storyboard.TargetProperty="Visibility">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
@@ -103,40 +96,31 @@
                         </Grid.ColumnDefinitions>
                         <ui:ContentPresenterEx x:Name="HeaderContentPresenter" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                                                Content="{TemplateBinding ui:ControlHelper.Header}"
-                                               ContentTemplate="{TemplateBinding ui:ControlHelper.HeaderTemplate}"
-                                               FontWeight="Normal" Foreground="{DynamicResource TextControlHeaderForeground}"
-                                               Margin="{DynamicResource TextBoxTopHeaderMargin}" TextWrapping="Wrap"
-                                               VerticalAlignment="Top"
-                                               Visibility="{TemplateBinding ui:ControlHelper.HeaderVisibility}"
+                                               ContentTemplate="{TemplateBinding ui:ControlHelper.HeaderTemplate}" FontWeight="Normal"
+                                               Foreground="{DynamicResource TextControlHeaderForeground}" Margin="{DynamicResource TextBoxTopHeaderMargin}"
+                                               TextWrapping="Wrap" VerticalAlignment="Top" Visibility="{TemplateBinding ui:ControlHelper.HeaderVisibility}"
                                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                        <Border x:Name="BorderElement" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="{TemplateBinding ui:ControlHelper.CornerRadius}"
-                                MinWidth="{TemplateBinding MinWidth}" MinHeight="{TemplateBinding MinHeight}"
-                                ui:ValidationHelper.IsTemplateValidationAdornerSite="True"/>
-                        <ScrollViewer x:Name="PART_ContentHost" Grid.Row="1" Grid.Column="0"
-                                      Style="{DynamicResource TextControlContentHostStyle}"
+                        <Border x:Name="BorderElement" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding ui:ControlHelper.CornerRadius}" MinWidth="{TemplateBinding MinWidth}"
+                                MinHeight="{TemplateBinding MinHeight}" ui:ValidationHelper.IsTemplateValidationAdornerSite="True"/>
+                        <ScrollViewer x:Name="PART_ContentHost" Grid.Row="1" Grid.Column="0" Style="{DynamicResource TextControlContentHostStyle}"
                                       HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                                       VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
                                       IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
                                       VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                      Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}"
-                                      IsTabStop="False" Focusable="False"
+                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding BorderThickness}"
+                                      Padding="{TemplateBinding Padding}" IsTabStop="False" Focusable="False"
                                       SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         <TextBlock x:Name="PlaceholderTextContentPresenter" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                   Foreground="{TemplateBinding ui:ControlHelper.PlaceholderForeground}"
-                                   Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}"
-                                   Text="{TemplateBinding ui:ControlHelper.PlaceholderText}"
-                                   TextAlignment="{TemplateBinding TextAlignment}" TextWrapping="{TemplateBinding TextWrapping}"
-                                   IsHitTestVisible="False"/>
-                        <Button x:Name="DeleteButton" Grid.Row="1" Grid.Column="1" Focusable="False"
-                                Style="{StaticResource DeleteButtonStyle}" BorderThickness="{TemplateBinding BorderThickness}"
+                                   Foreground="{TemplateBinding ui:ControlHelper.PlaceholderForeground}" Margin="{TemplateBinding BorderThickness}"
+                                   Padding="{TemplateBinding Padding}" Text="{TemplateBinding ui:ControlHelper.PlaceholderText}"
+                                   TextAlignment="{TemplateBinding TextAlignment}" TextWrapping="{TemplateBinding TextWrapping}" IsHitTestVisible="False"/>
+                        <Button x:Name="DeleteButton" Grid.Row="1" Grid.Column="1" Focusable="False" Style="{StaticResource DeleteButtonStyle}"
+                                BorderThickness="{TemplateBinding BorderThickness}"
                                 ui:ControlHelper.CornerRadius="{TemplateBinding ui:ControlHelper.CornerRadius, Converter={StaticResource RightCornerRadiusFilterConverter}}"
                                 Padding="{DynamicResource HelperButtonThemePadding}" IsTabStop="False" Visibility="Collapsed"
-                                FontSize="{TemplateBinding FontSize}" MinWidth="34" VerticalAlignment="Stretch"
-                                ui:TextBoxHelper.IsDeleteButton="True"/>
+                                FontSize="{TemplateBinding FontSize}" MinWidth="34" VerticalAlignment="Stretch" ui:TextBoxHelper.IsDeleteButton="True"/>
                         <ContentPresenter x:Name="DescriptionPresenter" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                                           Content="{TemplateBinding ui:ControlHelper.Description}"
                                           Visibility="{TemplateBinding ui:ControlHelper.DescriptionVisibility}"
@@ -152,11 +136,9 @@
                             <Setter TargetName="PlaceholderTextContentPresenter" Property="Visibility" Value="Collapsed"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="HeaderContentPresenter" Property="Foreground"
-                                    Value="{DynamicResource TextControlHeaderForegroundDisabled}"/>
+                            <Setter TargetName="HeaderContentPresenter" Property="Foreground" Value="{DynamicResource TextControlHeaderForegroundDisabled}"/>
                             <Setter Property="Background" Value="{DynamicResource TextControlBackgroundDisabled}"/>
-                            <Setter TargetName="BorderElement" Property="BorderBrush"
-                                    Value="{DynamicResource TextControlBorderBrushDisabled}"/>
+                            <Setter TargetName="BorderElement" Property="BorderBrush" Value="{DynamicResource TextControlBorderBrushDisabled}"/>
                             <Setter Property="Foreground" Value="{DynamicResource TextControlForegroundDisabled}"/>
                             <Setter TargetName="PlaceholderTextContentPresenter" Property="Foreground"
                                     Value="{DynamicResource TextControlPlaceholderForegroundDisabled}"/>
@@ -173,8 +155,7 @@
                                     Value="{DynamicResource TextControlPlaceholderForegroundFocused}"/>
                             <Setter Property="Background" Value="{DynamicResource TextControlBackgroundFocused}"/>
                             <Setter TargetName="BorderElement" Property="BorderBrush" Value="{StaticResource PrimarySolid}"/>
-                            <Setter TargetName="BorderElement" Property="BorderThickness"
-                                    Value="{DynamicResource TextControlBorderThemeThicknessFocused}"/>
+                            <Setter TargetName="BorderElement" Property="BorderThickness" Value="{DynamicResource TextControlBorderThemeThicknessFocused}"/>
                             <Setter Property="Foreground" Value="{DynamicResource TextControlForegroundFocused}"/>
                         </Trigger>
                         <MultiTrigger>
