--- a/Styles/Button.xaml
+++ b/Styles/Button.xaml
@@ -60,6 +60,7 @@
         <Setter Property="FontSize" Value="19"/>
         <Setter Property="Height" Value="48"/>
         <Setter Property="Width" Value="170"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
